Se agregó estilo a home y se creo el esqueleto del perfil de propiedad

--- a/app/properties_list/static/home.css
+++ b/app/properties_list/static/home.css
@@ -1,3 +1,15 @@
-.pagination {
+#pagination {
+    margin-top: 5vh;
+    width: 20%;
+    background-color: rgb(232, 243, 255);
     display: flex;
+    justify-content: space-around;
+}
+
+#properties_card {
+    background-color: bisque;
+    width: 75%;
+    margin-left: 5vw;
+    margin-bottom: 2vh;
+    padding: 2vh;
 }
