--- a/app/property/template/property.html
+++ b/app/property/template/property.html
@@ -9,49 +9,66 @@
         />
     </head>
     <body>
-        <div id="main_body">
-            <div id="head_image">
-                <img
-                    src="{{property_info.property_images[0].url}}"
-                    alt="{{property_info.property_images[0].title}}"
-                />
-            </div>
-            <h1>{{property_info.title}}</h1>
-
-            {% for desc in property_info.description.split('-') %}
-            <p>{{desc}}</p>
-            {% endfor %}
-
-            <p>{{property_info.public_id}}</p>
-            <p>{{property_info.property_type}}</p>
-            <p>{{property_info.location}}</p>
-
-            <h2>Contact form</h2>
-            <form
-                action="{{url_for('property_profile.property_contact', property_id=property_info.public_id)}}"
-                method="post"
-            >
-                <div id="contact_form">
-                    <div id="input_form">
-                        <label for="name">Name</label>
-                        <input type="text" name="name" />
-                    </div>
-                    <div id="input_form">
-                        <label for="phone">Phone</label>
-                        <input type="text" name="phone" />
-                    </div>
-                    <div id="input_form">
-                        <label for="email">Email</label>
-                        <input type="text" name="email" />
-                    </div>
-                    <div id="input_form">
-                        <label for="message">Message</label>
-                        <input type="text" name="message" />
-                    </div>
-
-                    <input type="submit" value="Submit" />
+        <div id="main_wrapper">
+            <div id="main_body">
+                <div id="head_image">
+                    <img
+                        src="{{property_info.property_images[0].url}}"
+                        alt="{{property_info.property_images[0].title}}"
+                    />
                 </div>
-            </form>
+                <h1>{{property_info.title}}</h1>
+
+                <h2>Descripción</h2>
+                {% for desc in property_info.description.split('-') %}
+                <p>{{desc}}</p>
+                {% endfor %}
+
+                <h2>Public ID</h2>
+                <p>{{property_info.public_id}}</p>
+
+                <h2>Tipo de propiedad</h2>
+                <p>{{property_info.property_type}}</p>
+
+                <h2>Ubicación</h2>
+                <p>{{property_info.location.name}}</p>
+
+                <div id="contact_form_wrapper">
+                    <h2>Contact form</h2>
+                    <p>Fill the contact form!</p>
+                    <form
+                        action="{{url_for('property_profile.property_contact', property_id=property_info.public_id)}}"
+                        method="post"
+                    >
+                        <div id="contact_form">
+                            <div class="input_form">
+                                <label for="name">Name</label>
+                                <input type="text" name="name" />
+                            </div>
+                            <div class="input_form">
+                                <label for="phone">Phone</label>
+                                <input type="text" name="phone" />
+                            </div>
+                            <div class="input_form">
+                                <label for="email">Email</label>
+                                <input type="text" name="email" />
+                            </div>
+                            <div class="input_form">
+                                <label for="message">Message</label>
+                                <input type="text" name="message" />
+                            </div>
+
+                            <input type="submit" value="Submit" />
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div id="slide_show">
+                <h2>Más imágenes</h2>
+                {% for img in property_info.property_images %}
+                <img src="{{img.url}}" alt="{{img.title}}" />
+                {% endfor %}
+            </div>
         </div>
     </body>
 </html>
