Imágenes y texto en la seccion de notas

--- a/app/property/template/contact_res.html
+++ b/app/property/template/contact_res.html
@@ -17,5 +17,8 @@
             durante la petición
         </p>
         {% endif %}
+
+        <h2>Ver más propiedades</h2>
+        <a href="{{url_for('home.all_properties')}}"> Ver más!</a>
     </body>
 </html>
